# eventsky

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  render.yaml
src/eventcloud/: alembic.ini  app.py  const.py  csrf.py  db.py  event_broker.py  eventcloud.db  middleware.py  models.py  package-lock.json  r2.py  r2_test_upload.txt  schemas.py  settings.py  test_r2_upload.py  utils.py
src/eventcloud/auth/: deps.py  models.py  routes.py  schema.py  session_backend.py  utils.py
src/eventcloud/db/: db.py
src/eventcloud/migrations/: env.py
src/eventcloud/migrations/versions/: 053f5f1ba08a_initial_schema.py  0d5435ae19a9_add_eventmessages.py  23730a5b0378_add_uuid_and_set_nullable.py  2414f6825fe9_add_pinned_to_eventmessage.py  3007527cfdad_added_preview_id.py  32463c73c335_switch_primary_key.py  344d9c5dedd0_added_event_uuid.py  5d59df81bd6c_add_eventmessages_foreignkey_to_event.py  60a2b2208105_initial_schema.py  905a2d313435_added_sender_name.py  9f0f34108a06_add_uuid_and_set_nullable.py  9f94193b7822_event_message_image.py  a1b425e78ac0_add_eventmessages_foreignkey_to_event_.py  b81673c37d72_add_is_staff.py  b90dc5e6e89b_add_is_staff.py  dde84f3e04f2_add_posting_messages_disabled_to_event.py  e17360e5d6a8_users.py  ee862287cf0a_added_blurred_image_key.py
src/eventcloud/routes/: event.py  events.py  messages.py
src/eventcloud/scripts/: create_dummy_event.py  create_user.py  init_db.py  safe_init_db.py
src/eventcloud/scripts/cron/: generate_blurred_images.py
src/eventcloud/static/css/: input.css  output.css
src/eventcloud/static/js/: htmx-ext-sse.js
src/eventcloud/templates/: _lightbox.html  _message_card.html  _message_image.html  _message_image_preview.html  _messages.html  _messages_load_chunk.html  _older_button.html  base.html  event_form.html  event_list.html  event_random_message.html  event_wall.html  index.html  login.html  logout.html  manage_event.html
tests/: conftest.py  sse_load_test.py  x_sse_load_text.py
tests/integration/event/: test_event.py
