[project]
name = "eventcloud"
version = "0.1.0"
description = "Realtime event feedback platform"
authors = [
    {name = "John Rei Enriquez",email = "johnrei.enriquez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "air (>=0.18.0,<0.19.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "boto3 (>=1.40.2,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "eventcloud", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"
watchdog = "^4.0.0"  # Optional: for auto-reload script
alembic = "^1.16.4"
